assets/css/style.css
        /* Start Global */
        
        * {
            margin: 0;
            padding: 0;
            box-sizing: border-box;
        }
        
        html {
            font-size: 10px;
            font-family: 'Roboto', sans-serif;
            color: rgb(255, 255, 255);
        }
        
        body {
            height: 100vh;
            background-image: url("../images/abstract.jpg");
            background-position: center center;
            background-attachment: fixed;
            background-repeat: no-repeat;
            background-size: cover;
        }
        
        section {
            padding: 6rem 0;
        }
        
        a {
            text-decoration: none;
            color: #eee;
        }
        
        p {
            font-size: 1.8rem;
            font-weight: 300;
        }
        
        img {
            width: 60%;
        }
        /* End Global */
        /* Start Reusable */
        
        .container {
            max-width: 90%;
            height: 100%;
            margin: 0 auto;
            position: relative;
        }
        
        .section-heading {
            text-align: center;
            margin-bottom: 10rem;
        }
        
        .section-heading h1 {
            font-size: 3.5rem;
            color: rgba(255, 255, 255, .3);
            text-transform: uppercase;
            font-weight: 300;
            position: relative;
            margin-bottom: 1rem;
        }
        
        .section-heading h1::before,
        .section-heading h1::after {
            content: '';
            position: absolute;
            bottom: -.5rem;
            left: 50%;
            transform: translateX(-50%);
            background-color: rgba(255, 255, 255, 0.75);
        }
        
        .section-heading h1::before {
            width: 10rem;
            height: 3px;
            border-radius: .8rem;
        }
        
        .section-heading h1::after {
            width: 1.5rem;
            height: 1.5rem;
            border-radius: 100%;
            bottom: -1rem;
        }
        
        .section-heading h6 {
            font-size: 1.6rem;
            font-weight: 300;
        }
        
        .has-margin-right {
            margin-right: 5rem;
        }
        /* End Reusable */
        /* Start Header */
        
        header {
            width: 100%;
            height: 100vh;
        }
        
        #myCanvas {
            padding-left: 0;
            padding-right: 0;
            display: block;
            position: absolute;
            left: 420px;
            top: -25px;
            width: 700px;
            height: 900px;
        }
        
        .top-nav {
            width: 100%;
            height: 100vh;
            position: fixed;
            top: -100vh;
            z-index: 50;
            background: url(../images/polygon.jpg);
            background-size: cover;
            color: #05ff11;
            border-bottom-right-radius: 100%;
            border-bottom-left-radius: 100%;
            transition: all 650ms cubic-bezier(1, 0, 0, 1);
        }
        
        .nav-list {
            list-style: none;
            width: 100%;
            height: 100%;
            display: flex;
            justify-content: center;
            align-items: center;
        }
        
        li {
            margin: 0 2rem;
        }
        
        .nav-link {
            font-family: 'Bangers', cursive;
            font-size: 5rem;
            padding: 1rem;
        }
        
        .nav-link:hover,
        .nav-link:focus {
            background: linear-gradient(to top, #05ff11, #1621c4);
            background-clip: text;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
        }
        
        .top-nav.open {
            top: 0;
            border-radius: initial;
        }
        
        .menu-toggler {
            position: absolute;
            top: 5rem;
            right: 5rem;
            width: 5rem;
            height: 4rem;
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            cursor: pointer;
            z-index: 1500;
            transition: transform 650ms ease-out;
        }
        
        .menu-toggler.open {
            transform: rotate(-45deg);
        }
        
        .bar {
            background: linear-gradient(to right, #05ff11, #1621c4);
            width: 100%;
            height: 4px;
            border-radius: .8rem;
        }
        
        .bar.half {
            width: 50%;
        }
        
        .bar.start {
            transform-origin: right;
            transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
        }
        
        .open .bar.start {
            transform: rotate(-450deg) translateX(.8rem);
        }
        
        .bar.end {
            align-self: flex-end;
            transform-origin: left;
            transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
        }
        
        .open .bar.end {
            transform: rotate(-450deg) translateX(-.8rem);
        }
        
        .landing-text {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            width: 100%;
            text-align: center;
            z-index: 1;
        }
        
        .landing-text h1 {
            font-size: 14rem;
            font-family: 'Bangers', cursive;
            background: linear-gradient(to top, #05ff11, #1621c4);
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
            padding: 1rem;
            user-select: none;
        }
        
        .landing-text h6 {
            font-size: 2rem;
            font-weight: 300;
        }
/* ... */

